maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: not found: value x
		if(!aMurSud(posX,posY)&&(getIndication(x,y+1)==9999)){
                                                       ^JediEscaper:18: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!aMurNord(posX,posY)&&){
                                            ^JediEscaper:21: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!aMurEst(posX,posY)&&){
                                           ^JediEscaper:24: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		else if(!aMurOuest(posX,posY)&&){
                                             ^